fix(foilsigh): change the spacing for the section header on the map

--- a/apps/foilsigh/assets/css/components/map/locations.scss
+++ b/apps/foilsigh/assets/css/components/map/locations.scss
@@ -25,9 +25,13 @@
     column-width: auto;
   }
 
+  @include grid.columns(6) {
+    column-count: 3;
+    column-gap: #{val.rhythm(1)};
+  }
+
   @include grid.columns(8) {
     column-count: 4;
-    column-gap: #{val.rhythm(1)};
   }
 
   & > * {
